Fix button logo overlap click issue

--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ body {
     margin-right: .5rem;
     border: 1px solid black;
     transition: 300ms;
+    z-index: 2;
 }
 
 .landing-button:hover{
